--- a/Informe/informeTarea3.tex
+++ b/Informe/informeTarea3.tex
@@ -217,7 +217,7 @@
 	
 	\section{Anexos}
 	\subsection{Código implementado}
-	\href{URL}{GitHub}
+	\href{https://github.com/DiegoArteagaMendoza/Tarea-3-AEDA-DiegoArteaga-RodrigoSandoval.git}{GitHub con el codigo en JAVA disponible}
 	
 \end{document}
 
